--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
@@ -24,6 +25,7 @@
                 <p>Oh, no! Jasper is attacking Beach city!</p>
                 <p>Each of the Crystal Gems has a random power level, they'll need to work together to defeat Jasper.</p>
                 <p>Click on each Crystal Gem to attack Jasper. Match your attack power to Jasper's HP to take her down!</p>
+                <p>Click anywhere to start the game!</p>
             </div>
         </div>
         
@@ -31,23 +33,23 @@
             <!-- Character images -->
             <div class="col-md-4">
                 <div class="row">
-                    <div class="col-md-12 steven">
-                        <img class="crystalGem" src="assets/images/steven.png" alt="Steven Universe">
+                    <div class="col-md-12">
+                        <img class="crystalGem" id="steven"  src="assets/images/steven.png" alt="Steven Universe">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 garnet">
-                        <img class="crystalGem" src="assets/images/garnet.png" alt="Garnet">
+                    <div class="col-md-12">
+                        <img class="crystalGem" id="garnet" src="assets/images/garnet.png" alt="Garnet">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 amethyst">
-                        <img class="crystalGem" src="assets/images/amethyst.png" alt="Amethyst">
+                    <div class="col-md-12">
+                        <img class="crystalGem" id="amethyst" src="assets/images/amethyst.png" alt="Amethyst">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 pearl">
-                        <img class="crystalGem" src="assets/images/pearl.png" alt="Pearl">
+                    <div class="col-md-12">
+                        <img class="crystalGem" id="pearl" src="assets/images/pearl.png" alt="Pearl">
                     </div>
                 </div>
             </div>
@@ -61,12 +63,14 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>Enemy Health</h3>
+                        <div class="health"></div>
                     </div>
                 </div>
                 <!-- Attack Power -->
                 <div class="row">
                     <div class="col-md-12">
                         <h3>Attack Power</h3>
+                        <div class="attackPower"></div>
                     </div>
                 </div>
 
@@ -77,12 +81,14 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>Wins:</h3>
+                        <div class="wins"></div>
                     </div>
                 </div>
                 <!-- Losses -->
                 <div class="row">
                     <div class="col-md-12">
                         <h3>Losses:</h3>
+                        <div class="losses"></div>
                     </div>
                 </div>
             </div>
