--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
                 <p>Oh, no! Jasper is attacking Beach city!</p>
                 <p>Each of the Crystal Gems has a random power level, they'll need to work together to defeat Jasper.</p>
                 <p>Click on each Crystal Gem to attack Jasper. Match your attack power to Jasper's HP to take her down!</p>
-                <p>Click anywhere to start the game!</p>
             </div>
         </div>
         
         <div class="row">
             <!-- Character images -->
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="row">
                     <div class="col-md-12">
                         <img class="crystalGem" id="steven"  src="assets/images/steven.png" alt="Steven Universe">
@@ -54,39 +53,40 @@
                 </div>
             </div>
             <!-- Enemy image -->
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <img class="enemy" src="assets/images/enemy.png" alt="Jasper">
             </div>
             <!-- Scores -->
             <div class="col-md-2">
                 <!-- Enemy Health -->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 score">
                         <h3>Enemy Health</h3>
                         <div class="health"></div>
                     </div>
                 </div>
                 <!-- Attack Power -->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 score">
                         <h3>Attack Power</h3>
                         <div class="attackPower"></div>
                     </div>
                 </div>
 
             </div>
+            <div class="col-md-1"></div>
             <!-- Win/Loss Tally -->
             <div class="col-md-2">
                 <!-- Wins -->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 score">
                         <h3>Wins:</h3>
                         <div class="wins"></div>
                     </div>
                 </div>
                 <!-- Losses -->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 score">
                         <h3>Losses:</h3>
                         <div class="losses"></div>
                     </div>
